alignment fixes

--- a/styles/case.css
+++ b/styles/case.css
@@ -88,8 +88,8 @@ li span {
 }
 
 p {
-  line-height: 1.33em;
-  font-size: 1em;
+  line-height: 1.8em;
+  font-size: 1.1em;
   margin-bottom: 1em;
 }
 p.bold {
@@ -149,7 +149,7 @@ h3.baloo {
   align-self: center;
   margin-top: 2em auto;
 }
- .intro {
+ #intro {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
@@ -208,25 +208,26 @@ h3.baloo {
 .detail.cream {
   background-color: transparent;
 }
-.left, .right {
+/*.left, .right {
   margin: 2em 0;
   width: 80vw;
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
+  flex-grow: 0;
 }
 .right {
   align-items: flex-end;
-}
+}*/
 img.element.proto {
   display: inline;
   margin: 0 0 1em;
   max-width: 300px;
 
 }
- #methodology, #research, #design, #user-test, #lessons-learned {
-   padding: 1em;
- }
+ /*#methodology, #research, #design, #user-test, #prototyping, #lessons-learned {
+   padding: 1em 15vw;
+ }*/
  .section-head {
    /*display: flex;
    align-items: center;*/
@@ -237,8 +238,9 @@ img.element.proto {
    /*width: 100%;*/
    background-color: #FFFFFF;
    padding-left: 2em;
-
-
+}
+ul.left.list li {
+    margin-bottom: 1em;
 }
 
 /*Methodology*/
@@ -262,26 +264,26 @@ h5, h6 {
 }
 h6 {
   font-size: 1em;
+  margin: 0 auto;
 }
-/*ul.list {
-  list-style-position: outside;
 
-}*/
 ul.left.list {
   list-style-position: outside;
   margin-bottom: 0;
   margin-right: 1em;
   padding-left: 1em;
+  line-height: 1.3em;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
 }
 .left {
   margin-left: 15vw;
+  padding-right: 1em;
 }
 .right {
   margin-right: 15vw;
-  padding-left: auto;
+  margin-left: auto;
 }
 .sub {
   display: flex;
@@ -306,7 +308,7 @@ ul.left.list {
 }
 
 #research img.element.big-element {
-  margin: 0 auto;
+  margin: 0 ;
 }
 /*End Research*/
 /*Design*/
@@ -315,30 +317,31 @@ ul.left.list {
   flex-flow: column nowrap;
   align-items: flex-start;
   justify-content: flex-start;
-  background-color: #FFFAF0;
+  /*background-color: #FFFAF0;*/
 }
 
 
  .item {
-  display: flex;
+  /*display: flex;
   flex-flow: column nowrap;
-  align-items: center;
-  justify-content: space-between;
-  margin: 1em;
+  align-items: flex-start;
+  justify-content: flex-start;
+  /*justify-content: space-between;
+  margin: 1em 0 */
 }
 
 .item h4 {
   margin-bottom: 1em;
 }
 
-.intro .detail {
+/*.intro .detail {
   width: 100vw;
-}
+}*/
 
-.big-element {
+/*.big-element {
   width: 80%;
-  margin: 0 auto;
-}
+  margin: 0 ;
+}*/
 
 #user-test h4 {
   color: #151515;
@@ -350,7 +353,7 @@ img.element {
 
 /*End User testing*/
 /* prototype*/
-#methodology .detail .cream, #prototyping .detail .cream{
+#methodology .detail .cream, #prototyping .detail .left{
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -395,34 +398,42 @@ img.element.proto {
 .section-head {
   padding-left: 15vw;
 }
-#methodology, #research, #prototyping {
-  padding-left : 15vw;
+ #methodology .detail, #research, #prototyping  {
+  /*margin-left : 15vw;*/
   flex-flow: row wrap;
   justify-content: flex-start;
+  align-self: flex-start;
 }
 .detail {
   flex-flow: row nowrap;
   justify-content: flex-start;
   align-items: flex-start;
-  /*width: 100vw*/
-  padding:0;
+
+  padding:1em 0;
 }
 ul.left, .left img {
   margin-left: 0;
 }
-
-.left {
-  padding-right: 2em;
+  #design, #user-test .white-g {
+  flex-flow: column wrap;
+  padding: 1em 15vw;
 }
+/*.left {
+  padding-right: 1em;
+}*/
 
   .single {
     align-items: center;
     padding: 1em 10em;
   }
-  /*h2.bold {
+  h2.bold {
     margin-right:auto;
-    flex-basis: 100%;
-  }*/
+    margin: 1em 0;
+    align-self: flex-start;
+  }
+  .detail.white-g , #methodology, #research, #design, #user-test, #prototyping {
+    padding: 1em 15vw;
+  }
     .brand1 {
       height: 350px;
       justify-content: center;
@@ -437,27 +448,26 @@ ul.left, .left img {
       font-size: 1.1em;
     }
   .left, .right{
-
+    margin: 0;
     width: 35vw;
   }
 
 
 
-  p {
-    font-size: 1em;
-  }
-  .intro {
+
+  /*.intro {
     flex-flow: row wrap;
-  }
+
+  }*/
 
  .sub {
     margin: 0;
     padding: 0;
   }
 
-  .method-text {
+  /*.method-text {
     max-width: 80%;
-  }
+  }*/
   .brand  {
     justify-content: center;
     height: 350px;
@@ -488,9 +498,9 @@ ul.left, .left img {
   p.bold {
     margin-bottom: 2em;
   }
-  img.element {
+  /*img.element {
     align-self: center;
-  }
+  }*/
   .method-detail {
     display: flex;
     flex-flow: row nowrap;
@@ -507,35 +517,48 @@ ul.left, .left img {
     padding-right: 0;
   }
   h4, h5, h6 {
-    margin: 0 auto;
+    margin: 0;
   }
 
-  #methodology .detail, #research .detail, #prototyping .detail{
+  .detail.white-g, #methodology .detail, #research .detail,  .detail.white-g {
     flex-flow: row nowrap;
+    width: 70vw;
     align-items: flex-start;
-    justify-content: flex-start;
-    margin-top: 0;
+    justify-content: space-between;
+    /*margin: 0 15vw;*/
   }
+  #intro .detail, #methodology .detail, #research .detail {
+    flex-flow: row nowrap;
+  }
+/*.intro {
+  padding: 1em 0 0;
+}*/
+h6 {
+  margin-top: 1em;
 
-#lessons-learned, {
+}
+#lessons-learned {
   flex-flow: row wrap;
   justify-content: center;
 }
-  #design, #user-test {
-    flex-flow: row nowrap;
-    justify-content: space-around;
-  }
+  /*#design .white-g,  #user-test .white-g {*/
+    /*flex-flow: row wrap;
+    justify-content: center;
+  } */
    .item {
-    flex-basis: 30vw;
+    display: flex;
+    flex-flow: row nowrap;
+    width: 70vw;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
+    margin: 0;
   }
-   .item h5 {
+   /*.item h5 {
     align-self: center;
-  }
-#prototyping, #lessons-learned {
-  padding: 1em 10em;
-}
+  }*/
+/*#prototyping, #lessons-learned {
+  padding: 1em 15vw;
+}*/
   .big-element {
     max-width: 250px;
   }
